--- a/actualites.html
+++ b/actualites.html
@@ -210,7 +210,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="XWpqpq9X3/CnnBsb6ouAeqI+jNz+27LbiIhiMGXegyMG0smtoDx6y/Q4qqs26OJQSBOHEEDYd1M1G+WKHfwJ65IxvFVHyQ/ESAC8yekxFsTzxPKyOAtAOLHv7ED3dCqx">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="7AOj6HmL7xu0h22sqli4I7YTN7ZqYDAGTUnI7hQM+JjxXdHY7m+1FNC8p8U0xRyJCkuBl7LMa7wMQtWags7u+cR7tBoMVdofY8fTty2E5SMm7Gu8KVO4/TLWM4sAjFQX">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -251,7 +251,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Directeur : Elena SYDOROVA<br>Courriel : sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
