--- a/anciensprojets.html
+++ b/anciensprojets.html
@@ -114,7 +114,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ULr1QoJ/maOUQf0SeoQA7kZfG6yE9rz1/WrcEcQ1NJopud6UGq3EuBrbLX0x0iB7q8nGYcrzR3hZFmxVXsjNhLmYFyVYa7wX+4XvIBCo/gtpup/s+kSYuWX24aRqVAat">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="22ros9fCQl36gSDfvtXx/nai/syaR7W6XpSr5zr01Hx22O5qzOE2hnKe5HYWejmeI6RmU7hm0nBK8FalDN2q0ruODbndm7QtrO8QC7eQqcv6UebpqNs0A/LJiuWl/PV8">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -155,7 +155,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Directeur : Elena SYDOROVA<br>Courriel : sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
