--- a/annonces.html
+++ b/annonces.html
@@ -186,7 +186,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="4ux6j+QKBjTsXRnjE1VditafLUI/qreV5a0Rh+1toa79Rc7/NETGFxvCa+1PQcJn4LkFNKuaHHCWOQBNyi5FNc6dtHq7ome8mO4DxgDdzcYnUDCQO6NZXsVfZQJL+3RZ">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Pc/8tVLBNQKMtfc+2E0EvrBd5s9q4i5iCcxA4VIwgt+nyecPj4UeWbXmBRmCHdRtMXs04oeHsH+g5LEE7qVCxwseOVBvTIkLQOkn6/QAl/XbSY2NY36EPsnhoulQoQ1+">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -227,7 +227,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Directeur : Elena SYDOROVA<br>Courriel : sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
