--- a/ru/actualites-1.html
+++ b/ru/actualites-1.html
@@ -168,7 +168,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="fuqPbRR0MMFmj+Rh+8HNFvdwmc7XoStEucvd3Z7RDG24ziJ6GLJdUYHiwZoo9KsxQQKegSEZPXP/x+52/6N06dAjbxT0xgO3TzqPkrMwxQkf8BfLgPOJSaUE3sL64Z3i">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="XwTrz/FzTMQOmDQEYev+JfLGyO2KAyAZBM0EdfQsv4lAsrborJJl89/b+9Xj+ut9qLaKZZzN1nfM0o6Q6FGbXZevWMkvMJA3lMOmZ9Oh9CduDz4GTKS0He41XxB5QF8f">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -208,7 +208,7 @@
                 <p class="mbr-text mbr-fonts-style display-7">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор: Елена Сидорова<br>Эл. почта: sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
