--- a/ru/actualites.html
+++ b/ru/actualites.html
@@ -209,7 +209,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="U6bWG8Di4FmC1cukTw1/AlTPpvCW8Q7RTdK7aCR8ABzmYtHyvvUzhfD02MnO5NNbw7jmYWq4MOJFch77CObtt3krk3+MW07L5bZjVHT+4syMRzbp0DsQpC1FH8WGvETL">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="7w4gNZNHG6B/5I7Hqwqiw27vCagASmOi7NrD9ZK0Mye1+FayZmZVhE6U85ZGFqy9PVh6jUwL5+ZkycJlTsf+uL/8DwmApfw4yxNW7XJxzhC3d43VTTHKhdj/yCvjKtOS">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -249,7 +249,7 @@
                 <p class="mbr-text mbr-fonts-style display-7">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор: Елена Сидорова<br>Эл. почта: sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
