--- a/ru/anciensprojets.html
+++ b/ru/anciensprojets.html
@@ -113,7 +113,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="illT3WKAmHj8H0eEqmnEMFYjpSDC8RvGNQXKgzxP0EZkmf9PkNhKHOtkzA1mX6Q848rNIM9St2JNdA40GSrF+3yPrdFYuUr2e8JumFFTAgUQgzkUa3TV3ubggCQDl8oM">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="usHDDUjdsUZFVtPVrqA2VgYCuvirgdJ0yeQpTtVxoiiXx1YTKuIW5T06MwMyo7XTxlui8A9qTAP8WvCd1p08vy2Z6lk3sV92tBZovh1KB28qIM5DGZJ27a4+AVgdb+U1">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -153,7 +153,7 @@
                 <p class="mbr-text mbr-fonts-style display-7">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор: Елена Сидорова<br>Эл. почта: sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
