--- a/ru/entreprises.html
+++ b/ru/entreprises.html
@@ -138,7 +138,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="TibS3v8blV7AV9RCzAtoeNm3PZtuj/QfjnIqIKrhm6gBeWz5mFihG2lT8jrjb1zjooBK8qky3Ohj5fwYUndRUanJRv4ytLoOaH4L+IimIZrovUdPMR7cnscWq4c1eDPo">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="F09tJpmmGvkn5vVffylie2FesaTVBLpSGvJI4NSnLhrQsVbXXw6b6Bi+blWLDmurbtcZj+2LUCpYuA62C42i4mgkc9l6yc1fSJIOBk/SVuJojEnPhyDdwg56sC44JnXg">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -178,7 +178,7 @@
                 <p class="mbr-text mbr-fonts-style display-7">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор: Елена Сидорова<br>Эл. почта: sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
