--- a/ru/organisations.html
+++ b/ru/organisations.html
@@ -315,7 +315,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="TETT8U3MkkeMbXWT6Oy01gKRYE3XvULJ+NV5kmutxzxje7RGxI3teueuuvwao2ZNH1p7L6bNzbRi28U9LT3/ROeSSfEEZDd9a86S7an/Gr/lM6dZLk/9I+KjILzUDsNN">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="fCutND1/RocZVL5nrDFNLIQw+f38e7XJE7JTp5/+ryp4NMmo663+jnQ9gKdi0GAJ/xxtdzb5qrVo6VoWgHLLwqdpv8f4mYo5GNxemeSlW01/lozkB0nhGgVEz3WzalYs">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -355,7 +355,7 @@
                 <p class="mbr-text mbr-fonts-style display-7">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор: Елена Сидорова<br>Эл. почта: sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
