--- a/annonces-1.html
+++ b/annonces-1.html
@@ -190,7 +190,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ZtCwJcI9QDlRHSuJwFaT4HqnNmnTywEvZIOzI9kW8i6IiWpB76oRlfgfW+B7nxMsgvcZ2l8IYZS8pET5ETFE1dm5kdicYcWIw3A80Z/js7QRk42Div3WkTmcUzcsPR0b">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="DcBgknPRDPkLiDAFQoUIuG/tkddxVKSk+6gYwdiYfkGJl6Y8EsgZ8Ux2+gDuIkRP2K0aiwGHK4v1f1wAmKaAIEHbBEDUMMXRC1lwEbqc7X1qAzqcPSZkAPLc49N3WB9t">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -231,7 +231,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Directeur : Elena SYDOROVA<br>Courriel : sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
