--- a/entreprises.html
+++ b/entreprises.html
@@ -139,7 +139,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ob8cBqnCzCvhM2uk1VNBLQk6ROkcJ7FP2SkOBDv+yPazqGSnDul3utK8WItIsGbep0/i2QIDr3oLenyeqQagRm6t3Ag5w2TSBM7+jl84RCl1zD8ze/CDClC2yU1COpZw">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="FEn2EsfngYJHFxpYPa6WTMsUDU/TIVoZEj9kX8NVQv38aWQPcJcdjd1he9l4aepZ6ASCyEUW5CFZhrfU6xrA5EZHzX33UK9d9n8bsIioBnqSSB1YLodsjPrRjoJbR6QK">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -180,7 +180,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Directeur : Elena SYDOROVA<br>Courriel : sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
