--- a/experts.html
+++ b/experts.html
@@ -231,7 +231,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="3QEJPYeGAwNUBt7PYnfk8bhyHRD2RnMuEsuNypyFOlTN373+sZApvlsuIkGRNxXif0ZAxzrrbKEq1ZW4lrS6NJy3yiZ6j769DczBXYzMb62Duf9zpItCtQSv4f4nQfL9">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Csc6fn+zVhCVYBXMNFxfE+qdkgWeTUDDWq3bLhAUkOOjs8r6xnEFPogTIVQKkvkvHwqd7Lny9DKJEJUOcxc02hX8kp4a+4rpiUrW7SNJMmk7FVCUsiuTmX8homnfF7hx">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -272,7 +272,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Directeur : Elena SYDOROVA<br>Courriel : sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
