--- a/ru/annonces.html
+++ b/ru/annonces.html
@@ -44,14 +44,14 @@
   <section data-bs-version="5.1" class="menu menu2 cid-sTVTcc8BJa" once="menu" id="menu2-3i">
     
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
-        <div class="container">
+        <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
                         <img src="assets/images/logo-96x61.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-7" href="index.html">Франко-русский<br>институт<br>ЮРГПУ (НПИ)</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="index.html">Франко-русский<br>институт<br>ЮРГПУ (НПИ)</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -120,7 +120,7 @@
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-2"><strong>Стипендиальная программа Французского правительства, предлагаемая Посольством Франции в России</strong></h6>
-                        <p class="mbr-text mbr-fonts-style mb-4 display-4"><strong>Архив</strong></p>
+                        
                         <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="annonces-1.html" target="_blank">ЧИТАТЬ</a></div>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5GyRyZc6Tj65qUf6D44Ji1D/2MKRynf1rMSQr7JND3pNawdBPYOBsRV0Vk3/IUKHkKgs3VTfzse+Fw2rdsQmEQ6JLVp64bT4vbPQ6s3g64gyX8Fu1R5A1I70VLi07aSu">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qkIFnGmLaBl9AGDuK9m7fAGEifCirsTVmSdGESi0mMOd5tR2s72cDvOZFvWdH5WBSLIYPLwALs6DLvk9mJVbsAy8HkpkoR+iIsuEoiU1fJw7vsz2GHigniGFuvcm0UA+">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -225,7 +225,7 @@
                 <p class="mbr-text mbr-fonts-style display-7">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор: Елена Сидорова<br>Эл. почта: sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
