--- a/ru/actualites-5.html
+++ b/ru/actualites-5.html
@@ -128,12 +128,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="sUwab7pJNM" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="sUwdyR6Ln1" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sUwab7pJNM" data-bs-target="#sUwab7pJNM"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sUwdyR6Ln1" data-bs-target="#sUwdyR6Ln1"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -235,11 +235,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sUwab7pJNM">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sUwdyR6Ln1">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sUwab7pJNM">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sUwdyR6Ln1">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -279,7 +279,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QYe25McQmtdCzihlHI2r9XQ9EgjYN8B+YKjFRgLs4mJI+3kqJ0fdxMIifQ0RRNWbbLm3LtQafIgp1WeYujrPbDVp2j2fnUW9L+jssFQRFI7Yk2BAePfVSW+LA820tj4s">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="cSfiLf0JclR3KX8p+rsAs+Quj64GyITmj9zE7mgFk/a6hDqnISEYXRHlTqYQ1TgFPjW25S73KtAbiBSXTW3TF6YKLlaEsvjruLkWAmcKyXA5PKJKLlwcs6MS5+6NgatW">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
